--- a/todo_frontend/pages/edit_books.html
+++ b/todo_frontend/pages/edit_books.html
@@ -1,102 +1,171 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Editar Libro</title>
-  <link rel="stylesheet" href="./assets/formulario.css" />
-  <!-- Bootstrap (opcional para estilos) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Formulario para editar un libro">
+    <meta name="keywords" content="HTML, CSS, JavaScript, NodeJS, Prisma">
+    <title>Editar Libro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-4">
-    <h1>Editar Libro</h1>
-    <form id="bookEditForm">
-      <div class="mb-3">
-        <label for="editBookTitle" class="form-label">Título</label>
-        <input type="text" class="form-control" id="editBookTitle" name="title" required />
-      </div>
-      <div class="mb-3">
-        <label for="editBookAuthorId" class="form-label">ID del Autor</label>
-        <input type="number" class="form-control" id="editBookAuthorId" name="author_id" required />
-      </div>
-      <div class="mb-3">
-        <label for="editBookAvailability" class="form-label">Disponibilidad</label>
-        <input type="text" class="form-control" id="editBookAvailability" name="availability" required />
-      </div>
-      <div class="mb-3">
-        <label for="editBookStock" class="form-label">Stock</label>
-        <input type="number" class="form-control" id="editBookStock" name="stock" min="0" required />
-      </div>
-      <div class="mb-3">
-        <label for="editBookPublicationDate" class="form-label">Fecha de Publicación</label>
-        <input type="text" class="form-control" id="editBookPublicationDate" name="publication_date" required />
-      </div>
-      <div class="mb-3">
-        <label for="editBookGenre" class="form-label">Género</label>
-        <input type="text" class="form-control" id="editBookGenre" name="genre" required />
-      </div>
-      <div class="mb-3">
-        <label for="editBookLanguage" class="form-label">Idioma</label>
-        <input type="text" class="form-control" id="editBookLanguage" name="language" required />
-      </div>
-      <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-    </form>
-  </div>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-toggler">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/icon.png" width="50" alt="Website icon">
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="books.html">Libros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="loans.html">Préstamos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="authors.html">Autores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-dark" href="create_books.html">Añadir Libro</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <script>
-    // Obtener el id del libro desde la URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const bookId = urlParams.get('id');
+    <section class="container mt-5 pt-5">
+        <h1 class="page-title">Editar Libro</h1>
+        <form id="editBookForm">
+            <input type="hidden" id="book_id">
+            
+            <div class="mb-3">
+                <label for="author_id" class="form-label">Autor</label>
+                <select class="form-control" id="author_id" name="author_id" required></select>
+            </div>
 
-    // Cargar los datos del libro para precargar el formulario
-    fetch(`http://localhost:5000/api/books/${bookId}`)
-      .then(response => {
-        if (!response.ok) throw new Error("Error al obtener los datos del libro");
-        return response.json();
-      })
-      .then(book => {
-        document.getElementById('editBookTitle').value = book.title;
-        // Se utiliza book.author_id o, si la API incluye la relación, book.author?.id
-        document.getElementById('editBookAuthorId').value = book.author_id;
-        document.getElementById('editBookAvailability').value = book.availability;
-        document.getElementById('editBookStock').value = book.stock;
-        document.getElementById('editBookPublicationDate').value = pubDate;
-        document.getElementById('editBookGenre').value = book.genre;
-        document.getElementById('editBookLanguage').value = book.language;
-      })
-      .catch(error => console.error(error));
+            <div class="mb-3">
+                <label for="stock" class="form-label">Stock</label>
+                <input type="number" class="form-control" id="stock" name="stock" required min="0">
+            </div>
 
-    // Manejar el envío del formulario de edición usando fetch con método PATCH
-    document.getElementById('bookEditForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const updatedBook = {
-        title: document.getElementById('editBookTitle').value,
-        author_id: parseInt(document.getElementById('editBookAuthorId').value, 10),
-        availability: document.getElementById('editBookAvailability').value,
-        stock: parseInt(document.getElementById('editBookStock').value, 10),
-        publication_date: document.getElementById('editBookPublicationDate').value,
-        genre: document.getElementById('editBookGenre').value,
-        language: document.getElementById('editBookLanguage').value,
-      };
+            <div class="mb-3">
+                <label for="title" class="form-label">Título</label>
+                <input type="text" class="form-control" id="title" name="title" required>
+            </div>
 
-      fetch(`http://localhost:5000/api/books/${bookId}`, {
-        method: 'PATCH',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(updatedBook)
-      })
-      .then(response => {
-        if (!response.ok) throw new Error("Error al actualizar el libro");
-        return response.json();
-      })
-      .then(data => {
-        alert("Libro actualizado exitosamente");
-        window.location.href = 'books.html'; // Redirige a la lista de libros
-      })
-      .catch(error => {
-        console.error(error);
-        alert("Error al actualizar el libro");
-      });
-    });
-  </script>
+            <div class="mb-3">
+                <label for="publication_date" class="form-label">Fecha de Publicación</label>
+                <input type="date" class="form-control" id="publication_date" name="publication_date" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="genre" class="form-label">Género</label>
+                <select class="form-control" id="genre" name="genre" required>
+                    <option value="Romance">Romance</option>
+                    <option value="Acción">Acción</option>
+                    <option value="Aventura">Aventura</option>
+                    <option value="Fantasía">Fantasía</option>
+                    <option value="Terror">Terror</option>
+                </select>
+            </div>
+
+            <div class="mb-3">
+                <label for="language" class="form-label">Idioma</label>
+                <select class="form-control" id="language" name="language" required>
+                    <option value="Español">Español</option>
+                    <option value="Inglés">Inglés</option>
+                    <option value="Francés">Francés</option>
+                    <option value="Portugués">Portugués</option>
+                    <option value="Alemán">Alemán</option>
+                </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Actualizar Libro</button>
+        </form>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", async () => {
+            const params = new URLSearchParams(window.location.search);
+            const bookId = params.get("id");
+
+            if (!bookId) {
+                alert("No se proporcionó un ID de libro válido.");
+                window.location.href = "books.html";
+                return;
+            }
+
+            document.getElementById("book_id").value = bookId;
+
+            try {
+                // Obtener lista de autores
+                const authorsResponse = await fetch("http://localhost:5000/api/authors");
+                const authors = await authorsResponse.json();
+                const authorSelect = document.getElementById("author_id");
+
+                authors.forEach(author => {
+                    const option = document.createElement("option");
+                    option.value = author.id;
+                    option.textContent = author.name;
+                    authorSelect.appendChild(option);
+                });
+
+                // Obtener datos del libro a editar
+                const bookResponse = await fetch(`http://localhost:5000/api/books/${bookId}`);
+                if (!bookResponse.ok) throw new Error("No se pudo cargar el libro.");
+                const book = await bookResponse.json();
+
+                document.getElementById("author_id").value = book.author_id;
+                document.getElementById("stock").value = book.stock;
+                document.getElementById("title").value = book.title;
+                document.getElementById("publication_date").value = book.publication_date;
+                document.getElementById("genre").value = book.genre;
+                document.getElementById("language").value = book.language;
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Hubo un error al cargar los datos.");
+            }
+        });
+
+        document.getElementById("editBookForm").addEventListener("submit", async (event) => {
+            event.preventDefault();
+            
+            const bookId = document.getElementById("book_id").value;
+
+            const formData = {
+                author_id: parseInt(document.getElementById("author_id").value),
+                stock: parseInt(document.getElementById("stock").value),
+                title: document.getElementById("title").value,
+                publication_date: document.getElementById("publication_date").value,
+                genre: document.getElementById("genre").value,
+                language: document.getElementById("language").value
+            };
+
+            try {
+                const response = await fetch(`http://localhost:5000/api/books/${bookId}`, {
+                    method: "PATCH",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                if (!response.ok) {
+                    throw new Error("Error al actualizar el libro.");
+                }
+
+                alert("Libro actualizado exitosamente.");
+                window.location.href = "books.html";
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Hubo un error al actualizar el libro.");
+            }
+        });
+    </script>
 </body>
 </html>
